--- a/src/client/app/Graph/Graph.html
+++ b/src/client/app/Graph/Graph.html
@@ -9,9 +9,24 @@
                     </div>
                     <div class="widget-foot">
                         <div class="clearfix"></div>
+
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div data-SDID="415367034" data-identifier="SnapdealAffiliateAds" data-height="300" data-width="250"></div>
+                    <script async id="snap_zxcvbnhg" src="https://affiliate-ads.snapdeal.com/affiliate/js/snapdealAffiliate.js"></script>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div data-SDID="448009422" data-identifier="SnapdealAffiliateAds" data-height="300" data-width="250"></div>
+                    <script async id="snap_zxcvbnhg" src="https://affiliate-ads.snapdeal.com/affiliate/js/snapdealAffiliate.js"></script>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4">
+                    <div data-SDID="448009424" data-identifier="SnapdealAffiliateAds" data-height="300" data-width="250"></div>
+                    <script async id="snap_zxcvbnhg" src="https://affiliate-ads.snapdeal.com/affiliate/js/snapdealAffiliate.js"></script>
+
+                </div>
+            </div>
     </section>
 </section>
