--- a/src/client/app/Graph/Graph.html
+++ b/src/client/app/Graph/Graph.html
@@ -28,5 +28,8 @@
 
                 </div>
             </div>
+            <distribution-base-pay-graph>
+            </distribution-base-pay-graph>
+
     </section>
 </section>
