--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,6 +60,7 @@
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/bower_components/d3/d3.js"></script>
+    <script src="/bower_components/ag-grid/main.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -73,6 +74,7 @@
     <script src="/src/client/app/core/core.module.js"></script>
     <script src="/src/client/app/dashboard/dashboard.module.js"></script>
     <script src="/src/client/app/Graph/Graph.module.js"></script>
+    <script src="/src/client/app/Grid/Grid.module.js"></script>
     <script src="/src/client/app/layout/layout.module.js"></script>
     <script src="/src/client/app/widgets/widgets.module.js"></script>
     <script src="/src/client/app/admin/admin.controller.js"></script>
@@ -90,6 +92,8 @@
     <script src="/src/client/app/Graph/Graph.controller.js"></script>
     <script src="/src/client/app/Graph/Graph.directive.js"></script>
     <script src="/src/client/app/Graph/Graph.route.js"></script>
+    <script src="/src/client/app/Grid/Grid.controller.js"></script>
+    <script src="/src/client/app/Grid/Grid.route.js"></script>
     <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
     <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
     <script src="/src/client/app/layout/shell.controller.js"></script>
